# LichtFeld-Studio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_lichtfeld.ps1  build_lichtfeld.sh  test.cpp  vcpkg.json
.github/: nightly-target-version.txt
.github/workflows/: nightly.yml
cmake/: FetchLibvterm.cmake  FindHIP.cmake  Findamd_comgr.cmake  Findmiopen.cmake  HIPUtils.cmake  WindowsROCm.cmake  config.h.in  filter_msvc_flags.ps1
docker/: Dockerfile  Dockerfile.rocm  docker-compose.rocm.yml
docs/: windows_hip_recovery_checklist.md
docs/plans/: rocm-hip-port-plan.md
docs/plugins/: api-reference.md  getting-started.md
gsplat/: CMakeLists.txt  Common.h  IntersectTile.cu  ProjectionUT3DGSFused.cu  QuatToRotmatCUDA.cu  RasterizeToPixelsFromWorld3DGSBwd.cu  RasterizeToPixelsFromWorld3DGSFwd.cu  RelocationCUDA.cu  SphericalHarmonics.cpp  SphericalHarmonicsCUDA.cu  Utils.cuh
include/: config.h.in
include/core/: camera.hpp
include/cuda_shim/: cooperative_groups.h  cublasLt.h  cublas_v2.h  cuda.h  cuda_bf16.h  cuda_fp16.h  cuda_runtime.h  cuda_runtime_api.h  curand.h  curand_kernel.h  cusolverDn.h  cusparse.h  device_launch_parameters.h
include/kernels/: hip_blas_compat.h  hip_intrinsics_compat.h  hip_rand_compat.h  hip_runtime_compat.h
resources/: lichtfeld-studio.rc
scripts/: hipify_rocm.sh  run_truck_hip_smoke.ps1  windows_gpu_recovery.ps1
src/app/: application.cpp  converter.cpp  main.cpp  mcp_gui_tools.cpp  mcp_sequencer_tools.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  camera.cpp  cuda_version.cpp  scene.cpp  splat_simplify.cpp
src/core/cuda/: CMakeLists.txt  memory_arena.cu  tensor_debug.cu
src/core/cuda/kernels/: selection_ops.cu
src/core/cuda/lanczos_resize/: lanczos_resize.cu
src/core_new/: CMakeLists.txt
src/io/: CMakeLists.txt  amf_image_loader.cpp  amf_image_loader.hpp  amf_image_loader_stub.cpp  image_decode_format.hpp  nvcodec_image_loader.hpp  nvcodec_image_loader_stub.cpp  pipelined_image_loader.cpp  video_frame_extractor_stub.cpp  video_player_stub.cpp
src/rendering/: CMakeLists.txt  camera_frustum_renderer.cpp  camera_frustum_renderer.hpp  cuda_gl_interop.cpp  cuda_gl_interop.hpp  cuda_gl_kernels.cu  cuda_gl_kernels_stub.cpp  cuda_kernels.hpp  depth_compositor.cpp  depth_compositor.hpp  environment_renderer.hpp  framebuffer.hpp  gl_state_guard.hpp  gs_rasterizer_tensor.cpp  gs_rasterizer_tensor.hpp  image_layout.hpp  mesh_renderer.cpp  mesh_renderer.hpp  point_cloud_renderer.cpp  point_cloud_renderer.hpp  render_target_pool.hpp  rendering_engine_impl.cpp  rendering_engine_impl.hpp  rendering_pipeline.cpp  rendering_pipeline.hpp  screen_renderer.cpp  screen_renderer.hpp  shader.hpp  split_view_renderer.cpp  split_view_renderer.hpp  vksplat_rasterizer.cpp  vksplat_rasterizer.hpp
src/rendering/cuda/: CMakeLists.txt
src/rendering/cuda/rasterization/include/: kernel_utils.cuh  kernels_forward.cuh
src/rendering/include/rendering/: frame_contract.hpp  render_constants.hpp  rendering.hpp
src/rendering/rasterizer/: CMakeLists.txt
src/rendering/rasterizer/gsplat_fwd/: CMakeLists.txt  Common.h  RasterizeToPixelsFromWorld3DGSFwd.cu  Utils.cuh
src/rendering/rasterizer/rasterization/include/: forward.h  kernel_utils.cuh  kernels_forward.cuh  rasterization_api_tensor.h
src/rendering/rasterizer/rasterization/src/: forward.cu  rasterization_api_tensor.cu
src/rendering/rasterizer/utils/: helper_math.h
src/training/: CMakeLists.txt  dataset.hpp  hip_fused_splat_backend.cpp  hip_fused_splat_backend.hpp  trainer.cpp  trainer.hpp  training_setup.cpp  vksplat_compute_backend.cpp  vksplat_compute_backend.hpp
src/training/components/: ppisp_controller_pool_stub.cpp  ppisp_controller_stub.cpp
src/training/control/: command_api.cpp  control_boundary.cpp
src/training/fastgs/: CMakeLists.txt
src/training/fastgs/rasterization/include/: kernel_utils.cuh  kernels_forward.cuh
src/training/include/lfs/core/: warp_reduce.cuh
src/training/include/lfs/kernels/: ssim.cuh
src/training/kernels/: densification_kernels.cu  densification_kernels.hpp  image_kernels.cu  mcmc_kernels.cu  ssim.cu
src/training/metrics/: metrics.cpp  metrics.hpp
src/training/optimizer/: adam_optimizer.cpp  adam_optimizer.hpp  hip_fused_adam.cu  hip_fused_adam.hpp  hip_fused_projection_optimizer.cu  hip_fused_projection_optimizer.hpp
src/training/rasterization/: edge_rasterizer.cpp  edge_rasterizer.hpp  fast_rasterizer.cpp  fast_rasterizer.hpp
src/training/rasterization/edge_compute/: CMakeLists.txt
src/training/rasterization/edge_compute/rasterization/include/: buffer_utils.h  edge_rasterization_api.h  edge_rasterization_config.h  kernel_utils.cuh  kernels_forward.cuh
src/training/rasterization/edge_compute/rasterization/src/: forward.cu  rasterization_api.cu
src/training/rasterization/edge_compute/utils/: helper_math.h
src/training/rasterization/fastgs/: CMakeLists.txt
src/training/rasterization/fastgs/rasterization/include/: buffer_utils.h  gpu_primitives.h  kernel_utils.cuh  kernels_backward.cuh  kernels_forward.cuh  rasterization_config.h
src/training/rasterization/fastgs/rasterization/src/: forward.cu
src/training/rasterization/gsplat/: CMakeLists.txt  Common.h  ProjectionUT3DGSFused.cu  QuatToRotmatCUDA.cu  RasterizeToPixelsFromWorld3DGSBwd.cu  RasterizeToPixelsFromWorld3DGSFwd.cu  RelocationCUDA.cu  SphericalHarmonicsCUDA.cu  Utils.cuh
src/training/strategies/: improved_gs_plus.cpp  improved_gs_plus.hpp  istrategy.hpp  strategy_utils.cpp
tests/: CMakeLists.txt  hip_backend_smoke.cu  test_colmap_image_layout.cpp  test_input_controller_focus.cpp  test_loss_graph_element.cpp  test_mcp_protocol.cpp  test_operator_registry_props.cpp  test_python_integration.cpp  test_python_io.cpp  test_render_settings_defaults.cpp  test_rendering_refactor_services.cpp  test_scene_validity.cpp  test_sdl_rml_key_mapping.cpp  test_selection_ipc_roundtrip.cpp  test_selection_rasterization_ops.cpp  test_sog_html_export.cpp  test_splat_simplify.cpp  test_undistort.cpp  test_video_export_utils.cpp  test_visualizer_post_work.cpp
(+322 files in other folders)
